# SPI_code

./: .gitignore  README.md
esp32c3_code/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32c3_code/ada_code/: ada_code.gpr  alire.toml
esp32c3_code/ada_code/src/: ada_code.adb  ada_code.ads
esp32c3_code/components/mqtt_component/: mqtt_component.c
esp32c3_code/main/: CMakeLists.txt  ada_hal.h  tfg_mk3.c
raspberry4_code/: main_rasp.py  recibir_json.py
raspberry4_code/templates/: index.html
